--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#">#</a><br>
-                <a target="_bLank" href="#">#</a><br>
-                <a target="_bLank" href="#">#</a><br>
-                <a target="_bLank" href="#">#</a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Right-Track-Garage-7/">https://chris-kherk.github.io/Right-Track-Garage-7/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Right+Track+Garage/Right+Track+Garage-7/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Right+Track+Garage/Right+Track+Garage-7/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Right+Track+Garage/Right+Track+Garage-7/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Right+Track+Garage/Right+Track+Garage-7/index.html</a><br>
+                <a target="_bLank" href="https://illustrious-horse-49e19d.netlify.app">https://illustrious-horse-49e19d.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
